--- a/src/app/continents/continents.component.html
+++ b/src/app/continents/continents.component.html
@@ -2,6 +2,7 @@
 
 <!-- CSSMap - Continents -->
 <div id="map-continents">
+    <h2>Select a region</h2>
     <div id="regions_div"></div>
 </div>
 <!-- END OF THE CSSMap - Continents -->
