--- a/src/app/country/country.component.html
+++ b/src/app/country/country.component.html
@@ -11,7 +11,7 @@
 
         <div class="details col-xs-12">
             <div class="detail-1">
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#geography">Geography</button>
+                <button type="button" class="btn" data-toggle="collapse" data-target="#geography">Geography</button>
                 <div class="accordion-1 collapse in" id='geography'>
                     <li class="list-group-item">
                         <div class="key-item">Capital</div>
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="detail-2">
-                    <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#codes">Codes</button>
+                    <button type="button" class="btn" data-toggle="collapse" data-target="#codes">Codes</button>
                     <div id="codes" class="accordion-2 collapse in">
                         <li class="list-group-item">
                             <div class="key-item">Dialing Codes</div>
@@ -63,7 +63,7 @@
                     </div>
             </div>
             <div class="detail-3">
-                <button type="button" class="btn btn-success" data-toggle="collapse" data-target="#names">Names</button>
+                <button type="button" class="btn" data-toggle="collapse" data-target="#names">Names</button>
                 <div id="names" class="accordion-3 collapse in">
                     <li class="list-group-item">
                         <div class="key-item">Native Name</div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="detail-4">
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#languages">Languages</button>
+                <button type="button" class="btn" data-toggle="collapse" data-target="#languages">Languages</button>
                 <div id="languages" class="accordion-4 collapse in">
                     <li class="list-group-item">
                         <div class="key-item">Languages</div>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="detail-5">
-                <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#currencies">Currencies</button>
+                <button type="button" class="btn" data-toggle="collapse" data-target="#currencies">Currencies</button>
                 <div id="currencies" class="accordion-5 collapse in">
                     <li class="list-group-item">
                         <div class="key-item">Currencies</div>
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="detail-6">
-                <button type="button" class="btn btn-success" data-toggle="collapse" data-target="#extra">Extra Info</button>
+                <button type="button" class="btn" data-toggle="collapse" data-target="#extra">Extra Info</button>
                 <div id="extra" class="accordion-6 collapse in">
                     <li class="list-group-item">
                         <div class="key-item">Timezones</div>
