--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,1 +1,9 @@
 <app-header></app-header>
+<div class="container">
+    <div class="content">
+        <h2>Page Not Found</h2>
+        <div routerLink="/">
+        <a>Click here to go to Homepage</a>
+        </div>
+    </div>
+</div>
