--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
       <a class="navbar-brand navbar-right" routerLink="/">World Map</a>
       <a class="back-btn" (click)="onGoBackClick($event)"><span><</span>Back</a>
       <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#filters">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span> 
