--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background-color: #fff;
+    background-color: #000;
     background-size: cover;
     background-position: 10%;
     font-family: 'Kanit', sans-serif;
@@ -22,10 +22,10 @@ h1,h2,h3,h4,h5,h6{
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #5bc0de; 
+    background: #c78a06; 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #5bccdd;
+    background: #c78a06;
 }
