--- a/src/app/continents/continents.component.css
+++ b/src/app/continents/continents.component.css
@@ -1,7 +1,14 @@
 #regions_div{
     width: 100%;
     height: 550px;
-    padding-top: 80px;
+    position: relative;
+}
+h2{
+    color: #c78a06;
+    display: block;
+    text-align: center;
+    padding-top: 60px;
+    text-transform: uppercase;
 }
 @media screen and (max-width:768px){
     #regions_div{
