--- a/src/app/filter-bar/filter-bar.component.css
+++ b/src/app/filter-bar/filter-bar.component.css
@@ -1,6 +1,7 @@
 .filter-panel{
-    position: relative;
-    top: 65px;
+    position: fixed;
+    top: 130px;
+    width: 15%;
 }
 .filter-panel label{
     display: block;
@@ -11,14 +12,13 @@
 
 .filter-regions{
     margin-bottom: 3em;
-    display: block;
 }
 /* Checkbox styling */
 .filter-regions .checkbox label{
     display: block;
     position: relative;
     padding-left: 60px;
-    color: #000;
+    color: #fff;
     margin: 5px 0;
 }
 .filter-regions .checkbox label div {
@@ -29,7 +29,7 @@
     top: -1px;
     left: 0px;
     border-radius: 1em;
-    border: 2px solid rgba(0, 0, 0, 0.3);
+    border: 2px solid rgba(136, 133, 133, 0.3);
     transition: background-color .3s;
 }
 .filter-regions .checkbox label div::after{
@@ -41,7 +41,7 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    background-color: rgba(0,0,0,.3);
+    background-color:rgba(136, 133, 133, 0.3);
     transition: left .3s;
 }
 .filter-regions .checkbox label input:checked + div{
@@ -50,7 +50,7 @@
 
 }
 .filter-regions .checkbox label input:checked ~ span{
-    color: #000;
+    color: rgb(241, 171, 19);
 }
 .filter-regions .checkbox label input:checked + div::after{
     left: calc( 100% - 20px );
@@ -77,9 +77,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
+    height: 20px;
+    width: 20px;
+    background-color: rgba(136, 133, 133, 0.3);
     border-radius: 50%;
 }
 .radio:hover input ~ span{
@@ -99,39 +99,44 @@ span:after{
 .radio input:checked ~ span:after{
     display: block;
 }
-
+.radio input:checked ~ div{
+    color: rgb(241, 171, 19);
+}
 .radio span:after{
-    top: 9px;
-	left: 9px;
+    top: 6px;
+	left: 6px;
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
 	background: white;
 }
 
+.radio label{
+    padding-left: 2px;
+    color: #fff;
+}
+.btn-info{
+    color: rgba(241,171,19);
+    border-radius: 0;
+    font-size: 1.15em;
+    background-color: rgba(128, 128, 128,0.6);
+    border-color: #888;
+}
+
+
+.navbar-nav{
+    float: none;
+}
 
 @media screen and (max-width:767px){
-    .filter-regions{
-        display: none;
-    }
-    .radio span{
-        height: 20px;
-        width: 20px;
-    }
-    .radio span:after{
-        top: 6px;
-        left: 6px;
-    }
-    .radio label{
-        padding-left: 2px;
-    }
-}
-@media screen and (max-width:767px) and (min-width:400px){
     .filter-panel{
-        max-width: 75%;
+        position: absolute;
+        max-width: 100%;
         margin: 0 auto;
-    }
-    .filter-regions{
-        width:100%;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1000;
+        background: #000;
     }
 }
