--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,20 +1,23 @@
 .back-btn{
     display: inline-block;
     cursor: pointer;
-    color: #fff;
+    color: rgb(241, 171, 19);
     font-size: 1.3em;
     padding: 15px 15px;
     margin-left: -15px;
     margin-right: -15px;
 }
 .back-btn:hover{
-    color:red;
+    text-decoration: underline;
 }
 .back-btn span{
     height: 1.3em;
 }
 .navbar-brand{
-    color:#fff;
+    color:rgb(241, 171, 19);;
+}
+.navbar-inverse .navbar-toggle .icon-bar{
+    background-color:rgb(241, 171, 19);
 }
 @media screen and (max-width:767px){
     .back-btn{
